--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        
+        <h1>Hello Nexter</h1>Hello World
     </body>
 </html>
