--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        <h1>Hello Nexter</h1>Hello World
+        <div class="sidebar">
+            SIdebar
+        </div>
+        <header class="header">
+            Header
+        </header>
+        <div class="realtors">
+            Top 3 realtors
+        </div>
+        <section class="features">
+            Features
+        </section>
+        <div class="story__pics">
+            Story Pictures
+        </div>
+        <div class="story__content">
+            Story Content
+        </div>
+        <section class="homes">
+            Homes
+        </section>
+        <section class="gallery">
+            Gallery
+        </section>
+        <footer class="footer">
+            Footer
+        </footer>
     </body>
 </html>
