--- a/index.html
+++ b/index.html
@@ -22,7 +22,49 @@
             Top 3 realtors
         </div>
         <section class="features">
-            Features
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-global"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit, vitae nostrum aliquid magni voluptas quidem.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-trophy"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit, </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit, vitae nostrum.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-key"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Your home in 1 week</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit, vitae nostrum aliquid magni voluptas quidem.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-presentation"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="./img/sprite.svg#icon-lock"> </use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, debitis tempora! Amet exercitationem odit, vitae nostrum aliquid quidem.</p>
+            </div>
+            
         </section>
         <div class="story__pics">
             Story Pictures
