--- a/index.html
+++ b/index.html
@@ -329,7 +329,14 @@
             
         </section>
         <footer class="footer">
-            Footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+            </ul>
+            <p class="copyright">&copy; 2023 Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ad voluptate libero, possimus ab distinctio magnam mollitia soluta modi officia?</p>
         </footer>
     </body>
 </html>
