--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
             <button class="nav-btn"></button>
         </div>
         <header class="header">
-            Header
+            <img src="img/logo.png" alt="" class="header__logo">
+            <h3 class="heading-3">Your own home:</h3>
+            <h1 class="heading-1">The Ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="seen on logo">
+                <img src="img/logo-forbes.png" alt="seen on logo">
+                <img src="img/logo-techcrunch.png" alt="seen on logo">
+                <img src="img/logo-bi.png" alt="seen on logo">
+            </div>
         </header>
         <div class="realtors">
             Top 3 realtors
