--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
             </div>
         </header>
         <div class="realtors">
-            Top 3 realtors
+            <h3 class="heading-3">Top 3 realtors</h3>
+            <div class="realtors__list">
+                <img src="img/realtor-1.jpeg" alt="Realtor" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Eric Fieman</h4>
+                    <p class="realtors__sold">123 houses sold</p>
+                </div>
+                <img src="img/realtor-2.jpeg" alt="Realtor" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                    <p class="realtors__sold">123 houses sold</p>
+                </div>
+                <img src="img/realtor-3.jpeg" alt="Realtor" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Toby Fieman</h4>
+                    <p class="realtors__sold">123 houses sold</p>
+                </div>
+            </div>
         </div>
         <section class="features">
             <div class="feature">
